--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
+    "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@mui-treasury/styles": "^0.3.2",
+    "@react-pdf/renderer": "^1.6.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,8 +16,12 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-mailchimp-subscribe": "^2.1.0",
+    "react-pdf": "^4.1.0",
+    "react-player": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-swipeable-views": "^0.13.9",
+    "uuid": "^8.1.0",
     "yup": "^0.28.5"
   },
   "scripts": {
