--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "drei": "0.0.63",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
@@ -22,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
+    "react-three-fiber": "^4.2.17",
     "uuid": "^8.1.0",
     "yup": "^0.28.5"
   },
