--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
     "react-three-fiber": "^4.2.17",
+    "three": "^0.118.3",
     "uuid": "^8.1.0",
     "yup": "^0.28.5"
   },
