--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "drei": "0.0.63",
     "formik": "^2.1.4",
+    "nice-color-palettes": "^3.0.0",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
