--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "cannon": "^0.6.2",
     "drei": "0.0.63",
     "formik": "^2.1.4",
     "nice-color-palettes": "^3.0.0",
