--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -26,6 +26,7 @@
     "react-swipeable-views": "^0.13.9",
     "react-three-fiber": "^4.2.17",
     "three": "^0.118.3",
+    "troika-three-text": "^0.30.2",
     "uuid": "^8.1.0",
     "yup": "^0.28.5"
   },
