--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "cannon": "^0.6.2",
+    "color": "^3.1.2",
     "drei": "0.0.63",
     "formik": "^2.1.4",
     "react": "^16.13.1",
