--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "cannon": "^0.6.2",
     "color": "^3.1.2",
+    "d3-scale": "^3.2.1",
     "drei": "0.0.63",
     "formik": "^2.1.4",
     "react": "^16.13.1",
