--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,7 +14,7 @@
     "cannon": "^0.6.2",
     "color": "^3.1.2",
     "d3-scale": "^3.2.1",
-    "drei": "0.0.63",
+    "drei": "0.0.67",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
@@ -23,12 +23,13 @@
     "react-material-ui-carousel": "^1.5.1",
     "react-pdf": "^4.1.0",
     "react-player": "^2.1.0",
+    "react-postprocessing": "^1.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
     "react-three-fiber": "^4.2.17",
     "three": "^0.118.3",
-    "troika-three-text": "^0.30.2",
+    "troika-three-text": "^0.31.0",
     "uuid": "^8.1.0",
     "yup": "^0.28.5"
   },
