--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -26,6 +26,7 @@
     "react-postprocessing": "^1.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9",
     "react-three-fiber": "^4.2.17",
     "three": "^0.118.3",
