--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.0",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@mui-treasury/styles": "^0.3.2",
     "@react-pdf/renderer": "^1.6.9",
@@ -29,6 +29,7 @@
     "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9",
     "react-three-fiber": "^4.2.17",
+    "react-three-gui": "^0.3.0",
     "three": "^0.118.3",
     "troika-three-text": "^0.31.0",
     "uuid": "^8.1.0",
