Add star warp effect and wobbly blackhole

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.35",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@mui-treasury/styles": "^0.3.2",
@@ -23,9 +24,10 @@
     "react-material-ui-carousel": "^1.5.1",
     "react-pdf": "^4.1.0",
     "react-player": "^2.1.0",
-    "react-postprocessing": "^1.1.6",
+    "react-postprocessing": "^1.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9",
     "react-three-fiber": "^4.2.17",
