--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -31,6 +31,7 @@
     "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9",
     "react-three-fiber": "^4.2.17",
+    "react-transition-group": "^4.4.1",
     "three": "^0.118.3",
     "troika-three-text": "^0.31.0",
     "uuid": "^8.1.0",
