--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -16,6 +16,7 @@
     "d3-scale": "^3.2.1",
     "drei": "^1.5.6",
     "formik": "^2.1.4",
+    "framer-motion": "^2.9.4",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
