--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,6 +6,7 @@
     "@emotion/core": "^10.0.35",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@mui-treasury/styles": "^0.3.2",
     "@react-pdf/renderer": "^1.6.9",
     "@testing-library/jest-dom": "^4.2.4",
