Add google analytics

--- a/portfolio/.vscode/settings.json
+++ b/portfolio/.vscode/settings.json
@@ -6,6 +6,10 @@
         "fewjkqo",
         "fu",
         "fu yx bryt e",
+        "n",
+        "n qt sypq",
+        "qt",
+        "sypq",
         "u",
         "u w xcr ekyp",
         "w",
