--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.2.0",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-material-ui-carousel": "^1.5.1",
     "react-pdf": "^4.2.0",
