Lighthouse audit improvements 3

--- a/portfolio/.vscode/settings.json
+++ b/portfolio/.vscode/settings.json
@@ -6,10 +6,14 @@
         "fewjkqo",
         "fu",
         "fu yx bryt e",
+        "iefix",
         "n",
         "n qt sypq",
+        "ozkcr",
         "qt",
         "sypq",
+        "ttf",
+        "ttf ozkcr",
         "u",
         "u w xcr ekyp",
         "w",
