Update google analytics

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -21,12 +21,12 @@
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-material-ui-carousel": "^1.9.2",
     "react-pdf": "^4.2.0",
     "react-player": "^2.1.0",
     "react-router-dom": "^5.2.0",
-    "react-router-ga": "^1.2.3",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
     "react-spring": "^8.0.27",
