--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,16 +18,16 @@
     "drei": "^1.5.6",
     "formik": "^2.1.4",
     "framer-motion": "^2.9.4",
-    "react": "^16.13.1",
+    "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.3.1",
     "react-ga": "^3.3.0",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-material-ui-carousel": "^1.9.2",
-    "react-pdf": "^4.2.0",
+    "react-pdf": "^9.1.1",
     "react-player": "^2.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.9.0",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.2.17",
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set \"CI=false\" && set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
